--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -32,7 +32,7 @@ library(rstanarm)
 
 Over the past 30 years, advancements in society and technology have significantly reduced global mortality rates, particularly for children under the age of five (child mortality). The child mortality rate declined from 93 deaths per 1,000 live births in 1990 to 37 deaths per 1,000 live births in 2022 [@worldbank2024M]. This progress represents millions of children who now have better chances of survival, marking a substantial achievement in global health.
 
-Despite this progress, the pace of reduction has slowed considerably since 2015, decreasing from an annual rate of 3.8% during the Millennium Development Goal (MDG) era (2000–2015) to 2.1% during the Sustainable Development Goal (SDG) era (2015–2022) [@unicef2022underfive]. In 2022 alone, 4.9 million children under the age of five died, equating to approximately 13,400 deaths per day [@unicef2022underfive]. Moreover, the distribution of mortality rates under five remains highly uneven. Developed countries such as Canada and the United States report mortality rates as low as 10 per 1,000 live births, while developing nations—particularly in sub-Saharan Africa—experience rates exceeding 100 per 1,000 live births [@worldbank]. This stark disparity underscores the urgent need for targeted interventions in high-mortality regions.
+Despite this progress, the pace of reduction has slowed considerably since 2015, decreasing from an annual rate of 3.8% during the Millennium Development Goal (MDG) era (2000–2015) to 2.1% during the Sustainable Development Goal (SDG) era (2015–2022) [@unicef2022underfive]. In 2022 alone, 4.9 million children under the age of five died, equating to approximately 13,400 deaths per day [@unicef2022underfive]. Moreover, the distribution of mortality rates under five remains highly uneven. Developed countries such as Canada and the United States report mortality rates as low as 10 per 1,000 live births, while developing nations—particularly in sub-Saharan Africa—experience rates exceeding 100 per 1,000 live births [@worldbank2024M]. This stark disparity underscores the urgent need for targeted interventions in high-mortality regions.
 
 Infectious diseases, such as pneumonia, diarrhea, and malaria, remain the leading causes of under-five deaths, closely tied to vaccination coverage and healthcare spending. Maternal health is also influenced by healthcare accessibility and quality, which often correlates with national health expenditures [@who2024childmortality]. While food production does not directly address these issues, it reflects a nation’s ability to meet nutritional needs, a critical factor in preventing malnutrition—a major contributor to child mortality.
 
@@ -46,9 +46,9 @@ The remainder of this paper is organized as follows. @sec-data describes the dat
 
 ## Overview
 
-For this analysis, we used four datasets: child mortality rate, food production index, DPT vaccine coverage rate, and health expense per capita. All four datasets are downloaded through **Worldbank Open Data** API [@worldbank]. World Bank Open Data platform is a comprehensive resource offering free and publicly accessible development data from nearly every country. This platform provides an extensive range of indicators across sectors such as health, agriculture, and education, enabling researchers to access globally standardized data for comparative analysis. The platform ensures transparency and usability by offering tools for visualization, data export, and API integration, making it a reliable and versatile resource for exploring global trends.
+For this analysis, we used four datasets: child mortality rate, food production index, DPT vaccine coverage rate, and health expense per capita. All four datasets are downloaded from **Worldbank Open Database** [@worldbank_data] through its API [@worldbank]. World Bank Open Database is a comprehensive resource offering free and publicly accessible development data from nearly every country. This platform provides an extensive range of indicators across sectors such as health, agriculture, and education, enabling researchers to access globally standardized data for comparative analysis. The platform ensures transparency and usability by offering tools for visualization, data export, and API integration, making it a reliable and versatile resource for exploring global trends.
 
-We employed **R** [@citeR], a coding platform to download, clean, and conduct statistical analysis. Besides, we also utilized R packages **tidyverse** [@tidy], **rstanarm** [@rstanarm], **ggplot2** [@gg], **knitr** [@knitr], **arrow** [@arrow], **here** [@here], **modelsummary** [@ms], and **dpylr** [@dplyr]. The paper is outlined in Git Hub using the starter folder provided in **Telling Stories With Data** [@tellingstories].
+We employed **R** [@citeR], a coding platform to download, clean, and conduct statistical analysis. Besides, we also utilized R packages **tidyverse** [@tidy], **rstanarm** [@rstanarm], **ggplot2** [@gg], **knitr** [@knitr], **arrow** [@arrow], **here** [@here], **modelsummary** [@ms], **testthat** [@testthat] and **dpylr** [@dplyr]. The paper is outlined in Git Hub using the starter folder provided in **Telling Stories With Data** [@tellingstories].
 
 ## Measurement
 	
