--- a/paper/references.bib
+++ b/paper/references.bib
@@ -279,6 +279,22 @@ keywords = {Crisis, Recession, Mortality, Child mortality, Economic development}
 }
 
 
+@misc{worldbank_data,
+  author       = {{The World Bank}},
+  title        = {World Bank Open Data},
+  year         = {2024},
+  url          = {https://data.worldbank.org/},
+  note         = {Accessed: 2024-11-29}
+}
 
+@Article{testthat,
+    author = {Hadley Wickham},
+    title = {testthat: Get Started with Testing},
+    journal = {The R Journal},
+    year = {2011},
+    volume = {3},
+    pages = {5--10},
+    url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
+  }
 
 
