--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -38,6 +38,14 @@ However, we are still facing another problem which is the imbalanced data. the s
 
 The remainder of this paper is organized as follows. @sec-method describes possible losses functions we incorporate into our model. @sec-metric introduces the new metrics we incorporated @sec-results presents the results of new losses and evaluation metric. Finally, @sec-diss discusses the implications of the findings, the limitations of the study, and recommendations for future research in finding strong lensing data.
 
+# Method
+
+To test the new metric and loss functions, we use the available strong lensing data for regression. We concatenate the features extracted from the CNN and contatenate them with the expert labels for regression. The result data has a total of ~ and ~ strong lenseing ones.
+
+## New loss function
+
+Here we will investigate two loss functions, ranknet loss and focal loss. 
+
 
 
 Over the past 30 years, advancements in society and technology have significantly reduced global mortality rates, particularly for children under the age of five (child mortality). The child mortality rate declined from 93 deaths per 1,000 live births in 1990 to 37 deaths per 1,000 live births in 2022 [@worldbank2024M]. This progress represents millions of children who now have better chances of survival, marking a substantial achievement in global health.
